# RS1-Group20

./: .gitattributes  CMakeLists.txt  README.md  package.xml
config/: 41068.rviz  gazebo_bridge.yaml
drone_ui/: package.xml  plugin.xml  setup.cfg  setup.py
drone_ui/drone_ui/: plugin.py
launch/: 41068_ignition.launch.py  41068_ignition_drone.launch.py  42043_ignition.launch.py  ignition.launch.py  ros_ign_bridge.launch.py  turtlebot4_nodes.launch.py  turtlebot4_spawn.launch.py
models/forest_plane/: model.sdf
models/forest_wall/: model.sdf
models/grass_plane/: model.sdf
src/: controller.cpp  controller.h  controllerinterface.h  mission.cpp  mission.h  mission_main.cpp  quadcopter.cpp  quadcopter.h  quadcopter_main.cpp  tsp_helper.h
urdf/: husky.gazebo.xacro  husky.urdf.xacro  mars_explorer.gazebo.xacro  mars_explorer.urdf.xacro  wheel.urdf.xacro
urdf_drone/: parrot.gazebo.xacro  parrot.urdf.xacro
worlds/: empty_world.sdf  large_demo.sdf  large_demo_lesstrees.sdf  simple_trees.sdf
